# balatro-elo

./: main.py  pyproject.toml
init/: init_data.py
templates/: base.html
