[project]
name = "balatro-elo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "fastapi==0.104.1",
    "jinja2==3.1.2",
    "motor==3.3.2",
    "pydantic>=2.12.3",
    "pymongo==4.6.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "uvicorn==0.24.0",
]
